tests/baselines/reference/getJavaScriptSyntacticDiagnostics14.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics14.ts':
/tests/cases/fourslash/a.js(1,13): error TS1109: Expression expected.


==== /tests/cases/fourslash/a.js (1 errors) ====
    Foo<number>();
                ~
!!! error TS1109: Expression expected.